Added Delete Friend Functionality

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -104,26 +104,71 @@
 		    	<div id="mySidenav" class="sidenav text-left">
 		    		<span id="numOfFriends" style="cursor:default"></span>
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-					<span style="cursor:default">
+					<span id="insideSideNav" style="cursor:default">
 						<label id="noFriends">
 							<p>You have no friends :(</p>
 							<p>Why not go add some?</p>
 						</label>
-						<label id="friend1"></label>
-						<label id="friend2"></label>
-						<label id="friend3"></label>
-						<label id="friend4"></label>
-						<label id="friend5"></label>
-						<label id="friend6"></label>
-						<label id="friend7"></label>
-						<label id="friend8"></label>
-						<label id="friend9"></label>
-						<label id="friend10"></label>
-						<label id="friend11"></label>
-						<label id="friend12"></label>
-						<label id="friend13"></label>
-						<label id="friend14"></label>
-						<label id="friend15"></label>
+						<div id="fr1">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(1)" hidden>
+							<label id="friend1"></label>
+						</div>
+						<div id="fr2">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(2)">
+							<label id="friend2"></label>
+						</div>
+						<div id="fr3">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(3)">
+							<label id="friend3"></label>
+						</div>
+						<div id="fr4">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(4)">
+							<label id="friend4"></label>
+						</div>
+						<div id="fr5">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(5)">
+							<label id="friend5"></label>
+						</div>
+						<div id="fr6">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(6)">
+							<label id="friend6"></label>
+						</div>
+						<div id="fr7">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(7)">
+							<label id="friend7"></label>
+						</div>
+						<div id="fr8">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(8)">
+							<label id="friend8"></label>
+						</div>
+						<div id="fr9">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(9)">
+							<label id="friend9"></label>
+						</div>
+						<div id="fr10">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(10)">
+							<label id="friend10"></label>
+						</div>
+						<div id="fr11">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(11)">
+							<label id="friend11"></label>
+						</div>
+						<div id="fr12">
+							<input value="X" type="button"  class="btn btn-danger pull-right" onclick="deleteFriend(12)">
+							<label id="friend12"></label>
+						</div>
+						<div id="fr13">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(13)">
+							<label id="friend13"></label>
+						</div>
+						<div id="fr14">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(14)">
+							<label id="friend14"></label>
+						</div>
+						<div id="fr15">
+							<input value="X" type="button" class="btn btn-danger pull-right" onclick="deleteFriend(15)">
+							<label id="friend15"></label>
+						</div>
 					</span>
 
 					<!-- Add Friends Button -->
