--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -87,6 +87,9 @@
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="friend_dropdown">Choose here<span class="caret"></span></button>
           <ul class="dropdown-menu scrollable-menu" role="menu" id="friend_scroll">
               <li>
+                <div id="noFr"> No Friends Added? Add From the Homepage! </div>
+              </li>
+              <li>
                 <div class="checkbox">
                   <label id="friend1"><input type="checkbox" value="" id="check1"></label>
                 </div>
