--- a/static/help.html
+++ b/static/help.html
@@ -80,9 +80,9 @@
 			<p>- Go to <a class="home" href="homepage.html">Home</a> and click the Create Meetup button located on the top right of the page</p>
 		</div>
 		<hr>
-		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#viewMeetups">How To View My Meetups</button>
-		<div id="viewMeetups" class="collapse in">
-			<p>- Click the My Meetups button located on the top right of the navigation bar</p>
+		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#addFriends">How To Add Friends</button>
+		<div id="addFriends" class="collapse in">
+			<p>- Go to <a class="home" href="homepage.html">Home</a> and click the Friends List button located at the top left of the page</p>
 		</div>
 		<hr>
 		<a type="button" class="btn btn-danger" href="contact_us.html"><h4>Still Stuck? Contact Us</h4></a>
