--- a/static/homepage.html
+++ b/static/homepage.html
@@ -103,78 +103,110 @@
 							<p>You have no friends :(</p>
 							<p>Why not go add some?</p>
 						</label>
-						<div id="fr1">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(1)" hidden>
-							<label id="friend1"></label>
-						</div>
-						<div id="fr2">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(2)">
-							<label id="friend2"></label>
-						</div>
-						<div id="fr3">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(3)">
-							<label id="friend3"></label>
-						</div>
-						<div id="fr4">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(4)">
-							<label id="friend4"></label>
-						</div>
-						<div id="fr5">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(5)">
-							<label id="friend5"></label>
-						</div>
-						<div id="fr6">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(6)">
-							<label id="friend6"></label>
-						</div>
-						<div id="fr7">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(7)">
-							<label id="friend7"></label>
-						</div>
-						<div id="fr8">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(8)">
-							<label id="friend8"></label>
-						</div>
-						<div id="fr9">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(9)">
-							<label id="friend9"></label>
-						</div>
-						<div id="fr10">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(10)">
-							<label id="friend10"></label>
-						</div>
-						<div id="fr11">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(11)">
-							<label id="friend11"></label>
-						</div>
-						<div id="fr12">
-							<input value="X" type="submit"  class="btn btn-danger pull-right" onclick="deleteFriend(12)">
-							<label id="friend12"></label>
-						</div>
-						<div id="fr13">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(13)">
-							<label id="friend13"></label>
-						</div>
-						<div id="fr14">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(14)">
-							<label id="friend14"></label>
-						</div>
-						<div id="fr15">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(15)">
-							<label id="friend15"></label>
-						</div>
+						<ul class="scrollable-menu" role="menu" id="friend_scroll">
+							<li>
+								<div id="fr1">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(1)" hidden>
+									<label id="friend1"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr2">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(2)">
+									<label id="friend2"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr3">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(3)">
+									<label id="friend3"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr4">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(4)">
+									<label id="friend4"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr5">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(5)">
+									<label id="friend5"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr6">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(6)">
+									<label id="friend6"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr7">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(7)">
+									<label id="friend7"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr8">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(8)">
+									<label id="friend8"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr9">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(9)">
+									<label id="friend9"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr10">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(10)">
+									<label id="friend10"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr11">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(11)">
+									<label id="friend11"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr12">
+									<input value="X" type="submit"  class="btn btn-danger pull-right" onclick="deleteFriend(12)">
+									<label id="friend12"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr13">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(13)">
+									<label id="friend13"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr14">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(14)">
+									<label id="friend14"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr15">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(15)">
+									<label id="friend15"></label>
+								</div>
+							</li>
+						</ul>
 					</span>
 
-					<hr style="margin: 0; padding: 0">
 
 					<!-- Add Friends Button -->
 					<div id="add">
+						<hr style="margin: 0; padding: 0">
 						<div class="form-group">
 
 							<!-- Textbox to Enter Name -->
 							<label class="control-label" for="addFr"></label>
 							<div>
-								<input type="text" id="addFr" class="form-control" placeholder="Enter Friend's Username">
+								<input type="text" id="addFr" class="form-control" placeholder="Enter a Username">
 							</div>
 						</div>
 
@@ -196,6 +228,7 @@
 				<div class="row content">
 					<h1>My Meetups</h1>
 					<br>
+					<h2 id="noM"> No meetups currently scheduled. <br> Go schedule some! </h2>
 					<ul class="scrollable-menu" role="menu" id="meetings_scroll">
 						<li>
 							<div class="container-fluid text-center meeting" id="meet1">
