--- a/static/homepage.html
+++ b/static/homepage.html
@@ -52,6 +52,12 @@
 						</a>
 					</li>
 
+					<li>
+						<a id="options" class="rightMenu" href="my_meetups.html">
+							<span>My Meetups</span>
+						</a>
+					</li>
+					
 					<!-- User/Options -->
 					<li>
 						<a id="options" class="dropdown-toggle rightMenu" data-toggle="dropdown" href="">
