--- a/static/login.html
+++ b/static/login.html
@@ -46,12 +46,12 @@
           <input id="login" class="btn btn-primary btn-block" value="Login" type="button" onclick="loginToHome()" disabled>
         </div>
       </div>
-<!--
+
       <div class="form-group">
         <div class="col-sm-offset-4 col-sm-5">
           <input id="signup" class="btn btn-primary btn-block" value="Sign Up" type="button" onclick="register()">
         </div>
-      </div> -->
+      </div>
     </form>
   </div>
 
