--- a/static/old_home.html
+++ b/static/old_home.html
@@ -12,7 +12,7 @@
 	<!-- Corresponding CSS File -->
 	<link href="css/top_nav_bar.css" rel="stylesheet"/>
 	<link href="css/responsive-calendar.css" rel="stylesheet" media="screen"/>
-	<link href="css/homepage.css" rel="stylesheet"/>
+	<link href="css/old_home.css" rel="stylesheet"/>
 
 	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
@@ -50,6 +50,12 @@
 					<li class="active menu">
 						<a id="homeButton" class="rightMenu" href="homepage.html">
 							Home
+						</a>
+					</li>
+
+					<li>
+						<a id="options" class="rightMenu" href="my_meetups.html">
+							<span>My Meetups</span>
 						</a>
 					</li>
 
@@ -96,7 +102,7 @@
 				</script>
 
 				<!-- Sidenav Content -->
-		    	<div id="mySidenav" class="sidenav text-left">
+		    <div id="mySidenav" class="sidenav text-left">
 		    		<span id="numOfFriends" style="cursor:default"></span>
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 					<span id="insideSideNav" style="cursor:default">
@@ -104,78 +110,118 @@
 							<p>You have no friends :(</p>
 							<p>Why not go add some?</p>
 						</label>
-						<div id="fr1">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(1)" hidden>
-							<label id="friend1"></label>
-						</div>
-						<div id="fr2">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(2)">
-							<label id="friend2"></label>
-						</div>
-						<div id="fr3">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(3)">
-							<label id="friend3"></label>
-						</div>
-						<div id="fr4">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(4)">
-							<label id="friend4"></label>
-						</div>
-						<div id="fr5">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(5)">
-							<label id="friend5"></label>
-						</div>
-						<div id="fr6">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(6)">
-							<label id="friend6"></label>
-						</div>
-						<div id="fr7">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(7)">
-							<label id="friend7"></label>
-						</div>
-						<div id="fr8">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(8)">
-							<label id="friend8"></label>
-						</div>
-						<div id="fr9">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(9)">
-							<label id="friend9"></label>
-						</div>
-						<div id="fr10">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(10)">
-							<label id="friend10"></label>
-						</div>
-						<div id="fr11">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(11)">
-							<label id="friend11"></label>
-						</div>
-						<div id="fr12">
-							<input value="X" type="submit"  class="btn btn-danger pull-right" onclick="deleteFriend(12)">
-							<label id="friend12"></label>
-						</div>
-						<div id="fr13">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(13)">
-							<label id="friend13"></label>
-						</div>
-						<div id="fr14">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(14)">
-							<label id="friend14"></label>
-						</div>
-						<div id="fr15">
-							<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(15)">
-							<label id="friend15"></label>
-						</div>
+						<ul class="scrollable-menu" role="menu" id="friend_scroll">
+							<li>
+								<div id="fr1">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(1)" hidden>
+									<label id="friend1"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr2">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(2)">
+									<label id="friend2"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr3">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(3)">
+									<label id="friend3"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr4">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(4)">
+									<label id="friend4"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr5">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(5)">
+									<label id="friend5"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr6">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(6)">
+									<label id="friend6"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr7">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(7)">
+									<label id="friend7"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr8">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(8)">
+									<label id="friend8"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr9">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(9)">
+									<label id="friend9"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr10">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(10)">
+									<label id="friend10"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr11">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(11)">
+									<label id="friend11"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr12">
+									<input value="X" type="submit"  class="btn btn-danger pull-right" onclick="deleteFriend(12)">
+									<label id="friend12"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr13">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(13)">
+									<label id="friend13"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr14">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(14)">
+									<label id="friend14"></label>
+								</div>
+							</li>
+							<li>
+								<div id="fr15">
+									<input value="X" type="submit" class="btn btn-danger pull-right" onclick="deleteFriend(15)">
+									<label id="friend15"></label>
+								</div>
+							</li>
+						</ul>
 					</span>
 
+
 					<!-- Add Friends Button -->
-					<div class="form-group">
-						<label class="control-label" for="addFr"></label>
-						<div>
-							<input type="text" id="addFr" class="form-control" placeholder="Enter Friend's Username">
+					<div id="add">
+						<hr style="margin: 0; padding: 0">
+						<div class="form-group">
+
+							<!-- Textbox to Enter Name -->
+							<label class="control-label" for="addFr"></label>
+							<div>
+								<input type="text" id="addFr" class="form-control" placeholder="Enter a Username">
+							</div>
 						</div>
+
+						<!-- Submit Button to Add Friend -->
+						<input value = "+ Add Friend" type="submit" id="addFriend" class="btn btn-primary btn-lg" onclick="addFriend()" disabled>
 					</div>
-					<input value = "+ Add Friend" type="submit" id="addFriend" class="btn btn-primary btn-lg" onclick="addFriend()" disabled>
 				</div>
-	    	</div>
+	    </div>
 
 			<!-- Right Create Meetup Button -->
 			<div class="text-left">
@@ -235,7 +281,7 @@
 
 	<!-- Corresponding JS File -->
 	<script src="js/top_nav_bar.js"></script>
-	<script src="js/homepage.js"></script>
+	<script src="js/old_home.js"></script>
 	<script src="js/responsive-calendar.js"></script>
 
 	<!-- Toggle Popovers -->
