--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -36,7 +36,7 @@
           </button>
 
           <!-- Title/Logo -->
-            <a class="navbar-brand" href="homepage.html">
+            <a class="navbar-brand" href="old_home.html">
               <span id="title">StudyBuddy</span>
             </a>
           </div>
@@ -47,7 +47,7 @@
 
             <!-- Home -->
             <li class="active menu">
-              <a id="homeButton" class="rightMenu" href="homepage.html">
+              <a id="homeButton" class="rightMenu" href="old_home.html">
                 Home
               </a>
             </li>
@@ -223,6 +223,41 @@
             <li>
               <div class="radio">
                 <label id="loc8"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc8').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc9"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc9').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc10"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc10').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc11"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc11').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc12"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc12').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc13"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc13').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc14"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc14').textContent)" name="study_loc"></label>
+              </div>
+            </li>
+            <li>
+              <div class="radio">
+                <label id="loc15"><input type="radio" onclick="modifyLocInfo(document.getElementById('loc15').textContent)" name="study_loc"></label>
               </div>
             </li>
           </ul>
