--- a/static/help.html
+++ b/static/help.html
@@ -36,7 +36,7 @@
 				</button>
 
 				<!-- Title/Logo -->
-	    		<a class="navbar-brand" href="homepage.html">
+	    		<a class="navbar-brand" href="old_home.html">
 	    			<span id="title">StudyBuddy</span>
 	    		</a>
 	    	</div>
@@ -47,7 +47,7 @@
 
 					<!-- Home -->
 					<li class="active menu">
-						<a id="homeButton" class="rightMenu" href="homepage.html">
+						<a id="homeButton" class="rightMenu" href="old_home.html">
 							Home
 						</a>
 					</li>
@@ -83,12 +83,12 @@
 		<br>
 		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#createMeetup">How To Create A Meetup</button>
 		<div id="createMeetup" class="collapse in">
-			<p>- Go to <a class="home" href="homepage.html">Home</a> and click the Create Meetup button located on the top right of the page</p>
+			<p>- Go to <a class="home" href="old_home.html">Home</a> and click the Create Meetup button located on the top right of the page</p>
 		</div>
 		<hr>
 		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#addFriends">How To Add Friends</button>
 		<div id="addFriends" class="collapse in">
-			<p>- Go to <a class="home" href="homepage.html">Home</a> and click the Friends List button located at the top left of the page</p>
+			<p>- Go to <a class="home" href="old_home.html">Home</a> and click the Friends List button located at the top left of the page</p>
 		</div>
 		<hr>
 		<a type="button" class="btn btn-danger" href="contact_us.html"><h4>Still Stuck? Contact Us</h4></a>
