--- a/static/old_home.html
+++ b/static/old_home.html
@@ -37,7 +37,7 @@
 				</button>
 
 				<!-- Title/Logo -->
-	    		<a class="navbar-brand" href="homepage.html">
+	    		<a class="navbar-brand" href="old_home.html">
 	    			<span id="title">StudyBuddy</span>
 	    		</a>
 	    	</div>
@@ -48,7 +48,7 @@
 
 					<!-- Home -->
 					<li class="active menu">
-						<a id="homeButton" class="rightMenu" href="homepage.html">
+						<a id="homeButton" class="rightMenu" href="old_home.html">
 							Home
 						</a>
 					</li>
